Update README with comprehensive Maven and JavaFX instructions
Co-authored-by: EyalAndOmer <19552945+EyalAndOmer@users.noreply.github.com>